...
  "preferences": "PREFERENCES",
  "language": "Language",
  "about": "ABOUT",
  "whoGuidelines": "WHO Guidelines",
  "privacyPolicy": "Privacy Policy",
  "appVersion": "App Version",
  "logOut": "Log Out",
  "chooseLanguage": "Choose Language",
  "appTitleLine1": "Health Facilities",
  "appTitleLine2": "Assessment Tool",
  "appTitleMultiline": "Health Facilities\nAssessment Tool",
  "requiredField": "Required field",
  "whoStaffEmailError": "WHO Staff must use a @who.int email",
...
