...
                      AppLocalizations.of(context)!.externalPartnerRole,
                      !_isWhoStaff,
                      () => setState(() {
                            _isWhoStaff = false;
                            _emailController.clear();
                          }),
                      key: const Key('toggle_external_partner'))),
            ],
          ),
        ),
        const SizedBox(height: 24),

        Form(
...
