...
    return _buildPageWrapper(
      formKey: _formKeys[3],
      title: AppLocalizations.of(context)!.step4Title,
      icon: Icons.medical_services,
      children: [
        _buildQuestionField(AppLocalizations.of(context)!.offersOutpatientLabel,
            _buildDropdown(["Yes", "No"], (val) => _offersOutpatient = val)),
        _buildQuestionField(
            AppLocalizations.of(context)!.offersInpatientLabel,
            _buildDropdown(["Yes", "No"], (val) {
              setState(() {
                _offersInpatient = val;
                if (val == "No") {
...
